alteracoes, quase la